@@ -22,6 +22,7 @@
 ; string[retval] == (char *)			[show only up to (return val) bytes]
 ; string[arg0]	== (char *)			[same as string[retval]]
 ; string[N]     == (char *)             [N>0]   [show only up to N bytes]
+; ignore	== (any)			[ignore arg, output blank]
 
 ; Backwards-compatibility:
 ; string0	== (char *)			[same as string[retval]]
