@@ -1,6 +1,11 @@
 2006-08-07  Steve Fink <sphink@gmail.com>
 
 	* display_args.c, etc/ltrace.conf, ltrace.h, read_config_file.c:
+	implement ignored arguments
+
+2006-08-07  Steve Fink <sphink@gmail.com>
+
+	* display_args.c, etc/ltrace.conf, ltrace.h, read_config_file.c:
 	implement string[argN] and string[N] parameter descriptors
 
 2006-08-07  Steve Fink <sphink@gmail.com>
